# gitalyzer

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: analyze.yml
docs/: README.md  product.md  prompts.md
docs/rfcs/: 0000-template.md  0001-cli-surface.md  0002-configuration.md  0003-llm-providers.md  0004-git-access.md  0005-analysis-mode.md  0006-write-mode.md  0007-output-logging-testing.md  0008-implementation-bootstrap.md  README.md
src/: analyze.rs  cli.rs  config.rs  lib.rs  main.rs  write.rs
src/git/: blobdiff.rs  commit.rs  mod.rs  remote.rs  repo.rs  staged.rs
src/output/: mod.rs  progress.rs
src/provider/: anthropic.rs  mock.rs  mod.rs  openai.rs  retry.rs
tests/: config_precedence.rs  e2e_analyze.rs  e2e_cli.rs  e2e_write.rs  git_layer.rs  provider_http.rs  render_snapshots.rs
tests/common/: mod.rs
tests/snapshots/: render_snapshots__analysis_human.snap  render_snapshots__analysis_human_plain.snap  render_snapshots__analysis_json.snap  render_snapshots__write_json.snap  render_snapshots__write_suggestion_block.snap
