[package]
name = "gitalyzer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI-powered terminal tool that analyzes Git commit message quality and helps developers write better commits"
authors = ["Andrii Tsok <andrii@tsok.org>"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
gix = "0.85.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
